Improve validation of completed static properties (#1662)